--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,9 @@
         "index.html"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#^1.2",
-        "paper-styles": "PolymerElements/paper-styles#^1.0",
-        "neon-animation": "PolymerElements/neon-animation#^1.0",
+        "polymer": "Polymer/polymer#1.3.1",
+        "paper-styles": "PolymerElements/paper-styles#1.1.4",
+        "neon-animation": "PolymerElements/neon-animation#1.1.0",
         "cbn-polymer-extensions": "git@bitbucket.org:cbn-it/cbn-polymer-extensions.git#polymer1.0"
     },
     "devDependencies": {
