--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
         "polymer": "Polymer/polymer#1.3.1",
         "paper-styles": "PolymerElements/paper-styles#1.1.4",
         "neon-animation": "PolymerElements/neon-animation#1.1.1",
-        "cbn-polymer-extensions": "git@bitbucket.org:cbn-it/cbn-polymer-extensions.git#polymer1.0"
+        "cbn-polymer-extensions": "git@bitbucket.org:cbn-it/cbn-polymer-extensions.git#master"
     },
     "devDependencies": {
         "web-component-tester": "Polymer/web-component-tester",
