--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
     "name": "cbn-tooltip",
     "version": "1.0.0",
-    "private": true,
     "ignore": [
         "**/.*",
         "node_modules",
@@ -13,7 +12,7 @@
         "polymer": "Polymer/polymer#^1.3.1",
         "paper-styles": "PolymerElements/paper-styles#^1.1.4",
         "neon-animation": "PolymerElements/neon-animation#^1.1.1",
-        "cbn-polymer-extensions": "git@bitbucket.org:cbn-it/cbn-polymer-extensions.git#master"
+        "cbn-polymer-extensions": "CBN-IT/cbn-polymer-extensions#~1.1.0"
     },
     "devDependencies": {
         "web-component-tester": "Polymer/web-component-tester",
