--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,25 @@
 {
-    "name": "cbn-tooltip",
-    "version": "1.0.0",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "../",
-        "test"
-    ],
-    "dependencies": {
-        "polymer": "Polymer/polymer#^1.3.1",
-        "paper-styles": "PolymerElements/paper-styles#^1.1.4",
-        "neon-animation": "PolymerElements/neon-animation#^1.1.1",
-        "cbn-polymer-extensions": "CBN-IT/cbn-polymer-extensions#~1.1.0"
-    },
-    "devDependencies": {
-        "web-component-tester": "Polymer/web-component-tester",
-        "iron-component-page": "PolymerElements/iron-component-page#^1.0",
-        "test-fixture": "PolymerElements/test-fixture#^1.0",
-        "paper-icon-button": "PolymerElements/paper-icon-button#^1.0",
-        "iron-icons": "PolymerElements/iron-icons#^1.0"
-    }
+  "name": "cbn-tooltip",
+  "version": "1.0.0",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "../",
+    "test"
+  ],
+  "dependencies": {
+    "polymer": "Polymer/polymer#^1.3.1",
+    "paper-styles": "PolymerElements/paper-styles#^1.1.4",
+    "neon-animation": "PolymerElements/neon-animation#^1.1.1",
+    "cbn-polymer-extensions": "CBN-IT/cbn-polymer-extensions#~1.1.0"
+  },
+  "devDependencies": {
+    "web-component-tester": "Polymer/web-component-tester",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0",
+    "test-fixture": "PolymerElements/test-fixture#^1.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.0", 
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5"
+  }
 }
